# BorrowScope

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  codecov.yml
.github/workflows/: ci.yml  coverage-docs.yml
borrowscope-cli/: Cargo.toml  borrowscope.json
borrowscope-cli/config/: default.toml
borrowscope-cli/src/: async_utils.rs  cargo.rs  cli.rs  config.rs  error.rs  graphviz.rs  instrumentation.rs  main.rs  output.rs  progress.rs  server.rs  utils.rs
borrowscope-cli/src/commands/: check.rs  completion.rs  export.rs  init.rs  mod.rs  run.rs  visualize.rs  watch.rs
borrowscope-cli/static/: index.html
borrowscope-cli/tests/: cli_integration.rs
borrowscope-graph/: Cargo.toml
borrowscope-graph/src/: conflicts.rs  lib.rs  performance.rs  query.rs  serialization.rs  visualization.rs
borrowscope-graph/tests/: advanced_query_tests.rs  conflict_edge_cases.rs  construction_edge_cases.rs  construction_tests.rs  performance_edge_cases.rs  performance_tests.rs  query_advanced_tests.rs  query_and_serialization_tests.rs  query_basic_tests.rs  query_comprehensive_tests.rs  query_edge_cases.rs  query_extreme_tests.rs  section_69_advanced_edge_cases.rs  section_69_construction_tests.rs  section_70_advanced_tests.rs  section_71_advanced_tests.rs  section_71_conflict_detection_tests.rs  serialization_advanced_tests.rs  serialization_edge_cases.rs  serialization_tests.rs  traversal_tests.rs  visualization_advanced_tests.rs  visualization_complex_scenarios.rs  visualization_edge_cases.rs  visualization_tests.rs
borrowscope-macro/: Cargo.toml  TRANSFORMATION_STRATEGY.md
borrowscope-macro/src/: best_practices.rs  borrow_detection.rs  codegen.rs  examples.rs  formatting.rs  generic_handler.rs  hygiene.rs  lib.rs  optimized_transform.rs  parser.rs  pattern.rs  smart_pointer.rs  span_utils.rs  transform_visitor.rs  validation.rs  visitor.rs
borrowscope-macro/tests/: advanced_macro_tests.rs  async_tests.rs  borrow_detection_tests.rs  box_tests.rs  closure_tests.rs  complete_tests.rs  control_flow_tests.rs  error_reporting_tests.rs  generic_tests.rs  integration_tests.rs  macro_expansion_tests.rs  macro_generated_code_tests.rs  method_call_tests.rs  pattern_compile_tests.rs  pattern_tests.rs  rc_arc_macro_transformation_tests.rs  rc_arc_tests.rs  scope_tests.rs  track_borrow_tests.rs  track_move_tests.rs  track_new_tests.rs  trait_object_tests.rs  transformation_tests.rs
borrowscope-macro/tests/compile/fail/: const_fn.rs  const_fn.stderr  extern_fn.rs  extern_fn.stderr
borrowscope-macro/tests/compile/pass/: assert_macro.rs  async_fn.rs  borrow_in_call.rs  chained_methods.rs  closure_as_argument.rs  closure_by_reference.rs  closure_multiple_captures.rs  closure_with_method.rs  consuming_method.rs  copy_type_assignment.rs  empty_scope.rs  for_loop.rs  format_macro.rs  if_else.rs  if_expression.rs  immutable_borrow.rs  immutable_method.rs  lifo_drops.rs  loop_with_break.rs  match_expression.rs  method_on_temporary.rs  method_with_args.rs  mixed_borrows.rs  mixed_move_new.rs  mixed_pattern.rs  move_chain.rs  move_closure.rs  move_string.rs  move_vec.rs  multiple_borrows.rs  multiple_macros.rs  multiple_nested.rs  mutable_borrow.rs  mutable_method.rs  nested_borrows.rs  nested_closures.rs  nested_macros.rs  nested_scopes.rs  nested_tuple_pattern.rs  pattern_in_scope.rs  (+10 more)
borrowscope-macro/tests/ui/pass/: borrow.rs  generics.rs  simple.rs
borrowscope-runtime/: Cargo.toml  README.md
borrowscope-runtime/benches/: BASELINE.md  optimization.rs  overhead_analysis.rs  performance.rs
borrowscope-runtime/examples/: advanced_usage.rs  basic_usage.rs  memory_profile.rs  performance_comparison.rs
borrowscope-runtime/src/: error.rs  event.rs  export.rs  graph.rs  lib.rs  lifetime.rs  test_utils.rs  tracker.rs
borrowscope-runtime/tests/: advanced_api_tests.rs  advanced_api_with_id_tests.rs  box_integration_tests.rs  error_handling.rs  integration_tests.rs  lifetime_challenges_tests.rs  lifetime_tests.rs  optimization_tests.rs  performance_edge_cases.rs  performance_integration_tests.rs  property_based_tests.rs  quickcheck_tests.rs  rc_arc_integration_tests.rs  refcell_cell_integration_tests.rs  static_const_integration_tests.rs  testing_strategy_edge_cases.rs  unit_tracker_tests.rs  unsafe_code_integration_tests.rs
borrowscope-runtime/tests/common/: mod.rs
course/: COURSE_COMPLETE.md  COURSE_STRUCTURE.md  PROGRESS.md
course/chapter-01/: 01-understanding-the-project-scope.md  02-rust-workspace-fundamentals.md  03-setting-up-the-workspace.md  04-git-and-version-control-setup.md  05-ci-cd-pipeline-basics.md  06-rust-toolchain-configuration.md  07-project-documentation-structure.md  08-development-environment-optimization.md
course/chapter-02/: 09-introduction-to-procedural-macros.md  10-creating-the-macro-crate.md  11-understanding-syn-and-quote.md  12-parsing-function-attributes.md  13-abstract-syntax-tree-basics.md  14-implementing-basic-attribute-macro.md  15-identifying-variable-declarations.md  16-identifying-borrow-expressions.md  17-code-generation-with-quote.md  18-macro-hygiene-and-best-practices.md  19-testing-procedural-macros.md  20-testing-procedural-macros.md
course/chapter-03/: 21-designing-the-runtime-api.md  22-event-tracking-system.md  23-graph-data-structures.md  24-json-serialization-with-serde.md  25-thread-safety-with-parking-lot.md  26-performance-optimization.md  27-integration-testing.md  28-error-handling.md  29-benchmarking-suite.md  30-documentation.md  31-chapter-summary.md  CHAPTER_SUMMARY.md
course/chapter-04/: 36-planning-the-transformation-strategy.md  37-implementing-the-ast-visitor.md  38-injecting-track-new-calls.md  39-injecting-track-borrow-calls.md  40-injecting-track-move-calls.md  41-handling-scope-boundaries.md  42-dealing-with-patterns.md  43-handling-control-flow.md  44-method-call-transformations.md  45-closure-capture-analysis.md  46-macro-expansion-considerations.md  47-error-reporting-in-macros.md  (+4 more)
coverage/: index.html
scripts/: generate-coverage-badge.sh  measure_optimization.sh
(+243 files in other folders)
