[workspace]
resolver = "2"
members = [
    "borrowscope-macro",
    "borrowscope-runtime",
    "borrowscope-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["BorrowScope Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mehmet-ylcnky/BorrowScope"
keywords = ["rust", "ownership", "visualization", "borrow-checker"]
categories = ["development-tools", "visualization"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Procedural macro dependencies
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Graph data structures
petgraph = "0.6"

# Concurrency
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
