[package]
name = "borrowscope-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for BorrowScope"

[[bin]]
name = "borrowscope"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
