[package]
name = "borrowscope-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for BorrowScope"

[[bin]]
name = "borrowscope"
path = "src/main.rs"

[dependencies]
# CLI framework
clap.workspace = true
clap_complete = "4.5"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
log = "0.4"
env_logger = "0.11"

# File system operations
walkdir = "2.4"
tempfile = "3.8"
notify = "6.1"
ignore = "0.4"

# Process execution
which = "6.0"

# Configuration
toml = "0.8"
dirs = "5.0"

# Terminal colors and formatting
colored = "2.1"
indicatif = "0.17"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Code parsing and generation
syn.workspace = true
quote.workspace = true
prettyplease = "0.2"

# Internal dependencies
borrowscope-graph = { path = "../borrowscope-graph" }
borrowscope-runtime = { path = "../borrowscope-runtime" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.1"
reqwest = { version = "0.11", features = ["json"] }
