[package]
name = "borrowscope-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Procedural macros for BorrowScope ownership tracking"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
proc-macro-error = "1.0"

[dev-dependencies]
borrowscope-runtime = { path = "../borrowscope-runtime", features = ["track"] }
trybuild = "1.0"
lazy_static = "1.4"
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full", "test-util"] }
