[package]
name = "borrowscope-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime tracking system for BorrowScope"

[features]
default = []
track = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
petgraph.workspace = true
lazy_static.workspace = true

[dev-dependencies]
criterion = "0.5"
lazy_static = "1.4"
borrowscope-macro = { path = "../borrowscope-macro" }

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "optimization"
harness = false
